--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -332,5 +332,6 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<app-empleado></app-empleado>
+<app-header></app-header>
 <router-outlet></router-outlet>
+<router-outlet name="secondary"></router-outlet>
