añado carrusel y servicio movie

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,8 +1,9 @@
 <div class="topnav">
     <a class="active" href="#home">Inicio</a>
     <a href="#empleado">Empleado</a>
-    <a href="#coches">Coches</a>
+    <a href="#coches"> Coches</a>
     <a [routerLink]="['alumnado']">Alumnado</a>
+    <a routerLink="/peliculas">Peliculas</a>
  </div>
  <br />
 
@@ -42,10 +43,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
-</header>
-</div>
-</div>
+
  <!--
   <div class="topnav">
    <a class="active" href="#home" (click)="changeRoute($event, 'home')">Inicio 2</a>
