--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,4 +1,11 @@
 <div class="topnav">
+  <img
+        alt="Vue logo"
+        class="logo col-2"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmkF929L_QFvEMzgZGJxxbOriAQ-KYZQ1xHw&usqp=CAU"
+        width="50"
+        height="120"
+      />
     <a class="active" href="#home">Inicio</a>
     <a href="#empleado">Empleado</a>
     <a href="#coches"> Coches</a>
@@ -6,48 +13,5 @@
  </div>
  <br />
 
- <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <img src="https://cdn2.actitudfem.com/830x623/filters:format(jpg):quality(75)/media/files/images/2023/11/peliculas-2024.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Primera Película</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="https://s1.eestatic.com/2023/03/22/series/cine/750435701_231847678_1706x960.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="https://hips.hearstapps.com/hmg-prod/images/estrenos-peliculas-julio-2023-649d7e5822be5.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-
- <!--
-  <div class="topnav">
-   <a class="active" href="#home" (click)="changeRoute($event, 'home')">Inicio 2</a>
-   <a href="#empleado" [routerLink]="[{ outlets: { secondary: ['empleado'] } }]">Empleado 2</a>
- </div>
- <br />   
- -->
+ 
 
