--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<div class="saludo">
+    <h1>MUNDO PELIS</h1>
+<h4>¡Bienvenido/a al mundo de las películas!</h4>
+</div>
+
+<div class="container-carrusel">
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item" *ngFor="let movie of popularMovies; let i = index" [class.active]="i === 0">
+          <img [src]="'https://image.tmdb.org/t/p/w500/' + movie.poster_path" class="d-block w-100" alt="Slide {{i}}">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>{{ movie.title }}</h5>
+            <p>{{ movie.overview }}</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
