--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -7,9 +7,8 @@
         height="120"
       />
     <a class="active" href="#home">Inicio</a>
-    <a href="#empleado">Empleado</a>
-    <a href="#coches"> Coches</a>
-    <a routerLink="/peliculas">Peliculas</a>
+    <a routerLink="/top-peliculas">Top Peliculas</a>
+    <a routerLink="/peliculas">WachList</a>
  </div>
  <br />
 
