--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item" *ngFor="let movie of popularMovies; let i = index" [class.active]="i === 0">
-          <img [src]="'https://image.tmdb.org/t/p/w500/' + movie.poster_path" class="d-block w-100" alt="Slide {{i}}">
+          <img [src]="'https://image.tmdb.org/t/p/w500/' + movie.backdrop_path" class="d-block w-100" alt="Slide {{i}}">
           <div class="carousel-caption d-none d-md-block">
             <h5>{{ movie.title }}</h5>
             <p>{{ movie.overview }}</p>
