inicio buscador simple

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,16 +1,16 @@
 <div class="topnav">
   <img
-        alt="Vue logo"
-        class="logo col-2"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmkF929L_QFvEMzgZGJxxbOriAQ-KYZQ1xHw&usqp=CAU"
-        width="50"
-        height="120"
-      />
-    <a class="active" href="#home">Inicio</a>
-    <a routerLink="/top-peliculas">Top Peliculas</a>
-    <a routerLink="/peliculas">WachList</a>
- </div>
- <br />
+    alt="logo"
+    class="logo col-2"
+    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmkF929L_QFvEMzgZGJxxbOriAQ-KYZQ1xHw&usqp=CAU"
+    width="50"
+    height="120"
+  />
+  <a class="active" routerLink="/home">Inicio</a>
+  <a routerLink="/top-peliculas">Top Peliculas</a>
+  <a routerLink="/peliculas">Populares</a>
+  <a routerLink="/buscador" class="btn btn-outline-success">BUSCADOR</a>
+
 
  
 
