--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -10,6 +10,7 @@
   <a routerLink="/top-peliculas">Top Peliculas</a>
   <a routerLink="/peliculas">Populares</a>
   <a routerLink="/buscador" class="btn btn-outline-success">BUSCADOR</a>
+  <a routerLink="/registro">Regístrese aquí</a>
 
 
 </div>
