--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,32 +1,49 @@
 <div class="container">
-
-<form [formGroup]="myForm">
-    <div class="mb-3">
+    <form [formGroup]="myForm">
+      <div class="mb-3">
+        <label class="form-label">Nombre de usuario</label>
+        <input formControlName="username" class="form-control" type="text"/>
+        <p *ngIf="myForm.get('username')!.touched && myForm.get('username')!.hasError('required')" class="form-text">Este campo es obligatorio</p>
+      </div>
+  
+      <div class="mb-3">
         <label class="form-label">Nombre</label>
         <input formControlName="nombre" class="form-control" type="text"/>
         <p *ngIf="myForm.get('nombre')!.touched && myForm.get('nombre')!.hasError('required')" class="form-text">Este campo es obligatorio</p>
-    </div>
-
-    <div class="mb-3">
+      </div>
+  
+      <div class="mb-3">
         <label class="form-label">Email</label>
         <input formControlName="email" class="form-control" type="text"/>
         <p *ngIf="myForm.get('email')!.touched && myForm.get('email')!.hasError('required')" class="form-text">Este campo es obligatorio</p>
-    </div>
-
-    <div class="mb-3">
+      </div>
+  
+      <div class="mb-3">
+        <label class="form-label">Contraseña</label>
+        <input formControlName="password" class="form-control" type="password"/>
+        <p *ngIf="myForm.get('password')!.touched && myForm.get('password')!.hasError('required')" class="form-text">Este campo es obligatorio</p>
+      </div>
+  
+      <div class="mb-3">
+        <label class="form-label">Repita su contraseña</label>
+        <input formControlName="password2" class="form-control" type="password"/>
+        <p *ngIf="myForm.get('password2')!.touched && myForm.get('password2')!.hasError('required')" class="form-text">Este campo es obligatorio</p>
+      </div>
+  
+      <div class="mb-3">
         <label class="form-label">Telefono</label>
         <input formControlName="telefono" class="form-control" type="text"/>
         <p *ngIf="myForm.get('telefono')!.touched && myForm.get('telefono')!.hasError('required')" class="form-text">Este campo es obligatorio</p>
         <p *ngIf="myForm.get('telefono')!.hasError('maxlength')" class="form-text">La longitud máxima de este campo es de 12</p>
-    </div>
-
-    <div class="mb-3">
+      </div>
+  
+      <div class="mb-3">
         <label class="form-label">Direccion</label>
         <input formControlName="direccion" class="form-control" type="text"/>
         <p *ngIf="myForm.get('direccion')!.touched && myForm.get('direccion')!.hasError('required')" class="form-text">Este campo es obligatorio</p>
-    </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
-
-</form>
-
-</div>
+      </div>
+  
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+  </div>
+  
