pulimos y añado watchlist y favoritos

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -9,8 +9,10 @@
   <a class="active" routerLink="/home">Inicio</a>
   <a routerLink="/top-peliculas">Top Peliculas</a>
   <a routerLink="/peliculas">Populares</a>
-  <a routerLink="/buscador" class="btn btn-outline-success">BUSCADOR</a>
+  <a routerLink="/watchlist">Watchlist</a>
+  <a routerLink="/favoritos">Favoritos</a>
   <a routerLink="/registro">Regístrese aquí</a>
+  <a routerLink="/buscador" class="btn btn-outline-success">BUSCADOR</a>
 
 
 </div>
