pulimos, y añado reparto a los detalles

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -13,6 +13,10 @@
   <a routerLink="/favoritos">Favoritos</a>
   <a routerLink="/registro">Regístrese aquí</a>
   <a routerLink="/buscador" class="btn btn-outline-success">BUSCADOR</a>
+  <form class="d-flex" (submit)="buscar()">
+    <input class="form-control" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="busqueda" name="searchTerm">
+    <button class="btn btn-outline-success" type="submit">Buscar</button>
+  </form>
 
 
 </div>
