--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -12,6 +12,7 @@
   <a routerLink="/watchlist">Watchlist</a>
   <a routerLink="/favoritos">Favoritos</a>
   <a routerLink="/registro">Regístrese aquí</a>
+  <a routerLink="/login">Login</a>
   <a routerLink="/buscador" class="btn btn-outline-success">BUSCADOR</a>
   <form class="d-flex" (submit)="buscar()">
     <input class="form-control" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="busqueda" name="searchTerm">
