agregar a favoritos y watchlist

--- a/src/app/detalles-pelicula/detalles-pelicula.component.html
+++ b/src/app/detalles-pelicula/detalles-pelicula.component.html
@@ -15,6 +15,16 @@
           <p class="card-text"><span class="fw-bold text-white">Reparto:</span> {{ pelicula.cast.join(', ') }}</p>
           <p class="card-text"><span class="fw-bold text-white">Fecha de lanzamiento:</span> {{ pelicula.release_date }}</p>
           <button (click)="openModal()" class="btn btn-primary">Ver Tráiler</button>
+          <div>
+            <button (click)="agregarAWatchlist()" class="btn btn-info">Agregar a Watchlist</button>
+            <span class="badge rounded-pill bg-warning text-dark">{{ mensaje }}</span>
+          </div>
+          <div>
+            <button (click)="agregarAFavoritos()" class="btn btn-danger">Agregar a Favoritos</button>
+            <span class="badge rounded-pill bg-warning text-dark">{{ mensajefav }}</span>
+          </div>
+          
+
         </div>
       </div>
     </div>
