--- a/src/app/app-header/app-header.component.scss
+++ b/src/app/app-header/app-header.component.scss
@@ -7,6 +7,7 @@
   /* Style the links inside the navigation bar */
   .topnav a {
     float: center;
+    font-weight: bold;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
@@ -22,6 +23,10 @@
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #04aa6d;
+    background-color: #018a53;
     color: white;
+  }
+
+  .btn{
+    font-weight: bold;
   }
