--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
         <div class="carousel-item" *ngFor="let movie of popularMovies; let i = index" [class.active]="i === 0">
           <img [src]="'https://image.tmdb.org/t/p/w500/' + movie.backdrop_path" class="d-block w-100" alt="Slide {{i}}">
           <div class="carousel-caption d-none d-md-block">
-            <h5>{{ movie.title }}</h5>
+            <h5><a href="/detallespelicula/{{movie.id}}" class="btn btn-primary bg-success">{{ movie.title }}</a></h5>
             <p>{{ movie.overview }}</p>
           </div>
         </div>
